# -ACN-1

./: .claudeignore  .gitignore  CLEANUP_NOTES.md  PROJECT_SUMMARY_FOR_CLAUDE.md  README.md  README_SUA_CODE_INSERTION.md  app.py  app_final_3_methods.py  app_insertion.py  insertion_repair.py  learning_based_insertion.py  pyproject.toml  requirements.txt  run.py
Bo_nao_AI_CVRP/: bieudo.py
_report_assets/dashboard/: dashboard_tach_cot_chuan.html
nazari_vrp/: __init__.py  data.py  insertion.py  model.py  solver.py  train.py
rl4co/models/rl/ppo/: ppo.py
rl4co/models/zoo/am/: decoder.py  encoder.py  model.py  policy.py
rl4co/utils/: meta_trainer.py  rich_utils.py  test_utils.py  trainer.py  utils.py
tests/: test_nazari_vrp.py
