[project]
name = "nazari-vrp-rl"
version = "1.0.0"
description = "Paper-aligned reinforcement learning solver for CVRP based on Nazari et al. NeurIPS 2018"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "torch",
    "streamlit",
    "plotly",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "rl4co",
    "configs",
    "docs",
    "examples",
    "lightning_logs",
    "logs",
]
