[project]
name = "nazari-vrp-rl"
version = "1.0.0"
description = "Paper-aligned reinforcement learning solver for CVRP based on Nazari et al. NeurIPS 2018"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "einops",
    "hydra-core",
    "hydra-colorlog",
    "lightning",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "plotly",
    "pyrootutils",
    "robust-downloader",
    "rich",
    "scipy",
    "streamlit",
    "tensordict",
    "torch",
    "torchrl",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "rl4co",
    "configs",
    "docs",
    "examples",
    "lightning_logs",
    "logs",
]
